# devtrail

./: .cursorrules  .gitignore  ADOPTION-GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  TRANSLATION-GUIDE.md  devtrail.spdx  dist-manifest.yml  install.ps1  install.sh
.cursor/rules/: devtrail.md
.devtrail/00-governance/: DOCUMENTATION-POLICY.md
.devtrail/00-governance/i18n/es/: DOCUMENTATION-POLICY.md  QUICK-REFERENCE.md
.devtrail/templates/: TEMPLATE-AILOG.md  TEMPLATE-INC.md  TEMPLATE-TDE.md  TEMPLATE-TES.md
.devtrail/templates/i18n/es/: TEMPLATE-AILOG.md  TEMPLATE-ETH.md  TEMPLATE-REQ.md  TEMPLATE-TDE.md  TEMPLATE-TES.md
.github/: copilot-instructions.md
.github/workflows/: docs-validation.yml  release-cli.yml  release-framework.yml  release.yml
auditoria/: copilot-auditoria.md  gemini-auditoria.md  qwen-auditoria.md  revision_auditorias.md
cli/: Cargo.toml
cli/src/: analysis_engine.rs  audit_engine.rs  complexity.rs  compliance.rs  config.rs  document.rs  download.rs  inject.rs  main.rs  manifest.rs  metrics_engine.rs  platform.rs  self_update.rs  utils.rs  validation.rs
cli/src/commands/: about.rs  analyze.rs  audit.rs  compliance.rs  explore.rs  init.rs  metrics.rs  mod.rs  new.rs  remove.rs  repair.rs  status.rs  update.rs  update_cli.rs  update_framework.rs  validate.rs
cli/src/tui/: app.rs  document.rs  event.rs  i18n_strings.rs  index.rs  markdown.rs  mod.rs  theme.rs  ui.rs
cli/src/tui/widgets/: doc_viewer.rs  help_popup.rs  metadata_panel.rs  mod.rs  nav_tree.rs  status_bar.rs
cli/tests/: analyze_test.rs  audit_test.rs  compliance_test.rs  init_test.rs  inject_test.rs  metrics_test.rs  new_test.rs  status_test.rs  update_test.rs  validate_test.rs
dist-templates/directives/: CLAUDE.md  cursorrules
docs/: README.md
docs/adopters/: ADOPTION-GUIDE.md  CLI-REFERENCE.md  WORKFLOWS.md
docs/archive/evolution/: plan-implementacion.md
docs/contributors/: TRANSLATION-GUIDE.md
docs/i18n/es/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/i18n/es/adopters/: ADOPTION-GUIDE.md  CLI-REFERENCE.md  WORKFLOWS.md
docs/i18n/zh-CN/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/i18n/zh-CN/adopters/: ADOPTION-GUIDE.md  CLI-REFERENCE.md  WORKFLOWS.md
evolution/: CLAUDE-PLAN-MAESTRO.md  plan-implementacion.md
i18n/es/: ADOPTION-GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
scripts/: validate-docs.ps1
