[package]
name = "devtrail-cli"
version = "1.1.0"
edition = "2021"
description = "CLI tool for DevTrail - Documentation Governance for AI-Assisted Development"
license = "MIT"
repository = "https://github.com/StrangeDaysTech/devtrail"
homepage = "https://strangedays.tech"
readme = "../README.md"
keywords = ["devtrail", "documentation", "governance", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Strange Days Tech, S.A.S."]

[[bin]]
name = "devtrail"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
zip = "2"
tempfile = "3"
colored = "2"
indicatif = "0.17"
dialoguer = "0.11"
sha2 = "0.10"
anyhow = "1"
semver = "1"
flate2 = "1"
tar = "0.4"
ratatui = { version = "0.29", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", optional = true }
pulldown-cmark = { version = "0.12", optional = true }

[features]
default = ["tui"]
tui = ["ratatui", "crossterm", "pulldown-cmark"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
